# mobilect-widgets

./: AUTHORS  Makefile.am  autogen.sh  configure.ac
po/: POTFILES.in
src/: Makefile.am  date-entry-popup.ui  date-entry.ui  date-entry.vala  mobilect-widgets-1.0.pc.in  mobilect-widgets.gresource.xml  notification-item.ui  notification-item.vala  notification.ui  notification.vala  stack-page.vala  stack.ui  stack.vala  view-buttons.ui  view.ui  view.vala  window.ui  window.vala
vapi/: Makefile.am  gd-1.0.vapi
